fixed so that everything fits on small phones on CPP

--- a/src/components/CreatePartyPage/Form/Web_shop/style.scss
+++ b/src/components/CreatePartyPage/Form/Web_shop/style.scss
@@ -31,6 +31,10 @@
   border-width: 0px;
   transition: border-width 0.2s;
   border-radius: 10px;
+  @include media-breakpoint-down(xs) {
+    width: 230px;
+    height: 230px;
+  }
   &:hover {
     border-style: solid;
     border-width: 4px;
@@ -75,6 +79,10 @@
   border-width: 4px;
   border-color: #4762b7;
   color: black;
+  @include media-breakpoint-down(xs) {
+    width: 230px;
+    height: 230px;
+  }
 }
 
 .shop-item-overlay {
@@ -101,6 +109,10 @@
   text-align: center;
   transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 1000;
+  @include media-breakpoint-down(sm) {
+    background-position-x: -20%;
+    background-position-y: -20%;
+  }
 }
 
 .shop-img {
@@ -121,6 +133,11 @@
   color: $dark;
   background-color: #f2f2f2;
   border-radius: 10px;
+  @include media-breakpoint-down(sm) {
+    margin-top: -30px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
 }
 
 .placeholder-div {
